--- a/编程入门.md
+++ b/编程入门.md
@@ -20,29 +20,24 @@
 - - 计算机历史
 - - 计算机架构与硬件
 - - 内核，操作系统，应用程序
-- - 课堂小结
 - C语言基础
 - - 什么是C语言
 - - hello world
 - - c语言基础
 - - - 存储单元，作用域，变量，基础运算，条件，循环，函数，结构体
 - - 编译运行
-- - 课堂小结
 - 面向对象程序设计（CPP）
 - - c与cpp的区别
 - - oop思想及实现
-- - 课堂小结
 - 数据结构
 - - 栈，队列，链表，树，图
 - - 应用数据结构
 - - - 堆栈，运行栈，递归，多叉树的实现，邻接表的实现
 - - 一点算法概念
 - - - 时间复杂度，空间复杂度
-- - 课堂小结
 - python基础
 - - 编译执行与解释执行
-- - python安装
-- - hello world
+- - Hello world
 - - python基础
-- - 部分工具库
-- - 课堂小结
+- - 应用python
+- - 自学推荐
